overflow problem fix start

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,6 +15,7 @@
   box-sizing: border-box;
   font-family: "JetBrains Mono", monospace;
   font-weight: 200;
+  overflow: hidden;
 }
 
 a {
@@ -31,7 +32,7 @@ button {
 h1 {
   padding: 1rem;
   text-transform: uppercase;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
 }
@@ -87,35 +88,77 @@ p {
 
 /* ABOUT */
 
+.about-content {
+  display: flex;
+  justify-content: center;
+  width: 70%;
+  margin: auto;
+  z-index: 0;
+  margin-top: 7%;
+}
+
+.left {
+  width: 25%;
+}
+
+.right {
+  width: 75%;
+}
+
 .me {
-  width: 250px;
-  height: 250px;
+  width: 350px;
+  height: 350px;
   border-radius: 50%;
   object-fit: cover;
 }
 
+
+.about-title {
+  font-size: 3rem;
+  margin-bottom: 4rem;
+}
+
+.about-text {
+  text-transform: none;
+  margin-bottom: 2rem;
+  font-size: 1.4rem;
+  line-height: 2.5rem;
+  padding: 0 2rem;
+}
+
 /* GALLERY */
+
+.content {
+  overflow-y: scroll;
+}
 
 .content-title {
   margin: 5rem;
   font-size: 2rem;
-
 }
+
 .content-images {
   width: 80%;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
-  height: fit-content;
   justify-content: center;
-  align-items: center;
+  overflow-y: scroll;
+  height: 90vh;
+  padding-bottom: 20vh;
 }
 
+.content-image {
+  width: 20vw;
+  height: 20vw;
+  object-fit: cover;
+  margin: 20px;
+}
+
+@media screen and (max-width: 768px) {
   .content-image {
-    width: 20vw; /* This sets the width to 25% of the viewport width */
-    height: 20vw; /* This sets the height to 25% of the viewport width */
-    object-fit: cover; /* This ensures the image covers the entire area of the container */
-    margin: 30px;
-   }
- 
- 
+    width: 70vw;
+    height: 70vw;
+  }
+  
+}
